trunk/Archive2/5a/623f4e43a5dc75/output
main.cpp:3:6: error: #error ("HALP")
     #error("HALP")
      ^
