trunk/Archive2/5a/623f4e43a5dc75/main.cpp
#define TESTING 1
#if defined(TESTING) && (TESTING == 1)
    #error("HALP")
#endif